tweet button all

--- a/app/views/games/_roundresultslong.html.erb
+++ b/app/views/games/_roundresultslong.html.erb
@@ -93,7 +93,12 @@
               +1
               <% end %>
             </td>
-            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>"</td>
+            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r1answer) %>"
+              <% if @round1winner.id == current_user.id && @round1winner.id == answer.user_id %>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r1letters %>: "<%= @currentusergamedata.r1answer %>" (<%= @currentusergame.r1cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              <% end %>
+            </td>
             <td><%= answer.r1points %></td>
           </tr>
         <% end %>
@@ -143,7 +148,12 @@
               +1
               <% end %>
             </td>
-            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r2answer) %>"</td>
+            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r2answer) %>"
+              <% if @round2winner.id == current_user.id && @round2winner.id == answer.user_id %>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r2letters %>: "<%= @currentusergamedata.r2answer %>" (<%= @currentusergame.r2cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              <% end %>
+            </td>
             <td><%= answer.r2points %></td>
           </tr>
         <% end %>
@@ -193,7 +203,12 @@
               +1
               <% end %>
             </td>
-            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r3answer) %>"</td>
+            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r3answer) %>"
+              <% if @round3winner.id == current_user.id && @round3winner.id == answer.user_id %>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r3letters %>: "<%= @currentusergamedata.r3answer %>" (<%= @currentusergame.r3cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              <% end %>
+            </td>
             <td><%= answer.r3points %></td>
           </tr>
         <% end %>
@@ -243,7 +258,12 @@
               +1
               <% end %>
             </td>
-            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r4answer) %>"</td>
+            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r4answer) %>"
+              <% if @round4winner.id == current_user.id && @round4winner.id == answer.user_id %>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r4letters %>: "<%= @currentusergamedata.r4answer %>" (<%= @currentusergame.r4cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              <% end %>
+            </td>
             <td><%= answer.r4points %></td>
           </tr>
         <% end %>
@@ -293,7 +313,12 @@
               +1
               <% end %>
             </td>
-            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r5answer) %>"</td>
+            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r5answer) %>"
+              <% if @round5winner.id == current_user.id && @round5winner.id == answer.user_id %>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r5letters %>: "<%= @currentusergamedata.r5answer %>" (<%= @currentusergame.r5cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              <% end %>
+            </td>
             <td><%= answer.r5points %></td>
           </tr>
         <% end %>
@@ -343,7 +368,12 @@
               +1
               <% end %>
             </td>
-            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r6answer) %>"</td>
+            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r6answer) %>"
+              <% if @round6winner.id == current_user.id && @round6winner.id == answer.user_id %>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r6letters %>: "<%= @currentusergamedata.r6answer %>" (<%= @currentusergame.r6cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              <% end %>
+            </td>
             <td><%= answer.r6points %></td>
           </tr>
         <% end %>
@@ -393,7 +423,12 @@
               +1
               <% end %>
             </td>
-            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r7answer) %>"</td>
+            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r7answer) %>"
+              <% if @round7winner.id == current_user.id && @round7winner.id == answer.user_id %>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r7letters %>: "<%= @currentusergamedata.r7answer %>" (<%= @currentusergame.r7cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              <% end %>
+            </td>
             <td><%= answer.r7points %></td>
           </tr>
         <% end %>
@@ -443,7 +478,12 @@
               +1
               <% end %>
             </td>
-            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r8answer) %>"</td>
+            <td>"<%= Obscenity.replacement(:stars).sanitize(answer.r8answer) %>"
+              <% if @round8winner.id == current_user.id && @round8winner.id == answer.user_id %>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://acrofriends.com" data-text='My winning acro! <%= @currentusergame.r8letters %>: "<%= @currentusergamedata.r8answer %>" (<%= @currentusergame.r8cat %>) Come play!' data-via="AcroParty" data-count="none">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              <% end %>
+            </td>
             <td><%= answer.r8points %></td>
           </tr>
         <% end %>
