--- a/app/views/games/_roundresultslong.html.erb
+++ b/app/views/games/_roundresultslong.html.erb
@@ -491,3 +491,10 @@
   </div>
 
 </div>
+<div class="chatbutton">
+  <%= link_to(gamechat_games_path(@game)) do %>
+    <div class="gamechat button">
+      <span><%= image_tag("emoji/smiley.png", :class => "smallspeechimage") + 'Game chat' + image_tag("emoji/speech_balloon.png", :class => "smallspeechimage") %></span><br>
+    </div>
+  <% end %>
+</div>
