--- a/app/views/games/_roundvoteshort.html.erb
+++ b/app/views/games/_roundvoteshort.html.erb
@@ -119,3 +119,10 @@
         setTimeout(reloadPage, timeleft);
       </script>
     </div>
+    <div class="chatbutton">
+      <%= link_to(gamechat_games_path(@game)) do %>
+        <div class="gamechat button">
+          <span><%= image_tag("emoji/smiley.png", :class => "smallspeechimage") + 'Game chat' + image_tag("emoji/speech_balloon.png", :class => "smallspeechimage") %></span><br>
+        </div>
+      <% end %>
+    </div>
