--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -106,6 +106,22 @@
     width: 30px;
     margin-bottom: -6px;
   }
+  .tooltips {
+    width: 300px;
+    margin: 0 auto;
+    padding: 5px;
+    background-color: white;
+    border: 1px solid black;
+    color: blue;
+    font-size: 94%;
+  }
+  .tipbutton {
+    float: right;
+    width: 90px !important;
+    padding: 4px !important;
+    font-size: 90%;
+    border: 0;
+  }
 
   /* GROUP PAGES */
   #newgrouplink {
