--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -83,7 +83,7 @@
 </div>
 
 <% if current_user.username == "Matt" %>
-  <%= button_to "Send test email", {:controller => "pages", :action => "testemail", :method => "put"}, :class => "button tipbutton", remote: true %>
+  <%= button_to "Send test email", {:controller => "pages", :action => "sendemail", :method => "put"}, :class => "button tipbutton", remote: true %>
 <% end %>
 
 <%= javascript_include_tag "page/mainnav" %>
